alignment fixes for collab page

--- a/css/collab.css
+++ b/css/collab.css
@@ -223,13 +223,6 @@ body {
 	}
 }
 
-/* Parallax effect */
-body {
-	margin: 0;
-	padding: 0;
-	overflow-x: hidden;
-	/* Prevent horizontal scrolling */
-}
 
 .career-section,
 .collab-section {
@@ -330,6 +323,7 @@ h3 {
 
 
 .footer-branding {
+	padding-top: 3vh;
 	padding-bottom: 3vh;
 	text-align: center;
 }
@@ -359,24 +353,25 @@ h3 {
 		width: 70vw;
 		flex-direction: column;
 		align-items: center;
+		gap: 42px;
 	}
 
 
 	h1 {
-		font-size: 3rem;
+		font-size: 3.5rem;
 	}
 
 	h3 {
 		font-size: 2em;
 	}
 
-	career-section h2,
+	.career-section h2,
 	.collab-section h2 {
-		font-size: 1.6em;
+		font-size: 2em;
 	}
 
-	p {
-		font-size: 1.3em;
+	.career-section p, .collab-section p {
+		font-size: 1.7em;
 		line-height: 1;
 	}
 
